--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 # Use the correct index file (choose one)
-DirectoryIndex welcome.php
+DirectoryIndex index.php
 # Or use index.php if it's your main file
 # DirectoryIndex index.php
 
@@ -9,4 +9,4 @@ RewriteEngine On
 # If the requested URL is not a file or directory, rewrite to welcome.php (or index.php)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^$ /welcome.php [L]  # Redirect to welcome.php as the homepage
+RewriteRule ^$ /index.php [L]  # Redirect to welcome.php as the homepage
